--- a/vignettes/roar.Rnw
+++ b/vignettes/roar.Rnw
@@ -1,3 +1,5 @@
+%\VignetteIndexEntry{Identify differential APA usage from RNA-seq alignments}
+%\VignettePackage{roar}
 \documentclass{article}
 \author{Elena Grassi\\
 Department of Molecular Biotechnologies and Health Sciences,\\ MBC, University of Turin, Italy\\
