News plus import varie

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,1 +1,10 @@
-First version.
+CHANGES IN VERSION 0.99.6
+-----------------------
+
+NEW FEATURES
+
+    o No new features, just adopted the suggested format for the NEWS file
+   
+BUG FIXES
+
+    o No changes classified as 'bug fixes'
