--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,16 +1,23 @@
 CHANGES IN VERSION 1.7.2
-   o New code to efficiently consider more than a single APA foreach gene - under active development (man pages, vignettes and
-   UnitTests are being updated).
-
 -----------------------
+    o New code to efficiently consider more than a single APA foreach gene 
+      - under active development (man pages, vignettes and UnitTests are being updated)
+
+    o Tests now performed with testthat
+    
+BUG FIXES
+
+    o No changes classified as 'bug fixes'
 
 CHANGES IN VERSION 1.7.1
 -----------------------
 
 NEW FEATURES
    
-    o Now the gtf can contain an attribute that represents the lengths of PRE and POST portions on the transcriptome. If this
-      is omitted the lengths on the genome are used (like before). Note that right now every gtf entry (or none of them) should have it.
+    o Now the gtf can contain an attribute that represents the lengths of PRE and POST 
+      portions on the transcriptome. 
+      If this is omitted the lengths on the genome are used (like before). 
+      Note that right now every gtf entry (or none of them) should have it.
       
 BUG FIXES
 
