Fixed vignette (added hyperref)
From: Elena Grassi <data@clo>

git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/roar@114042 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/roar.Rnw
+++ b/vignettes/roar.Rnw
@@ -5,7 +5,7 @@
 Department of Molecular Biotechnologies and Health Sciences,\\ MBC, University of Turin, Italy\\
 }
 \usepackage{Sweave}
-
+\usepackage{hyperref}
 % From dexseq vignette
 \newcommand{\Robject}[1]{{\small\texttt{#1}}}
 \newcommand{\Rfunction}[1]{\Robject{#1}}
