Fixed counts for RoarDatasetMultipleAPA
From: Elena Grassi <data@clo>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/roar@114047 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,11 @@
+CHANGES IN VERSION 1.7.6
+-----------------------
+    
+BUG FIXES
+
+    o Now correcly using only reads falling on PRE portions in methods countResults and fpkmResults
+      also for RoarDatasetMultipleAPA objects.
+    
 CHANGES IN VERSION 1.7.2
 -----------------------
     o New code to efficiently consider more than a single APA foreach gene 
