--- a/vignettes/roar.Rnw
+++ b/vignettes/roar.Rnw
@@ -284,9 +284,10 @@ metadata column "type" equal to "apa" and the "apa" column with unambiguous ids 
 The "gene" metadata columns for these entries should not be initialized.
 All the studied gene exons need to be reported, in this case the metadata column "gene" should contain 
 the gene id (the same one reported for each gene APAs) while "type" should be set to "gene" and "apa" to NA.
-All apa entries assigned to a gene should have coordinates that falls inside it (otherwise XXX TODO CHECK) and every gene that appears should contain at least one APA.
+All apa entries assigned to a gene should have coordinates that falls inside it and every gene that appears should contain at least one APA.
 
-Annotation files that follow these rules can be found at \url{http://94.91.177.36:6638/roar/}. 
+Annotation files that follow these rules can be found at 
+\url{https://github.com/vodkatad/roar/wiki/Identify-differential-APA-usage-from-RNA-seq-alignments}. 
 From the user point of view the steps needed to perform a multipleAPA analysis are exactly the same of
 the standard one, the only difference lies in the output of methods that report results as long as in this
 case we have more than a single roar value for each gene. The details are reported in the corresponding
