--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,8 @@
+CHANGES IN VERSION 1.9.1
+-----------------------
+    
+    o Updated the vignette with some details about overlapping gene features
+
 CHANGES IN VERSION 1.7.6
 -----------------------
     
